--- a/html/styles.css
+++ b/html/styles.css
@@ -2,10 +2,16 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: Arial;
 }
+h1 {
+    
+}
+
 header {
   flex: 0 0 75px;
   background-color: #94618e;
+  color: #ffffff;
 }
 main {
   flex: 1;
@@ -28,6 +34,14 @@ footer {
 }
 .middle {
   flex:1 1 300px;
+}
+.middle-upper {
+  flex:1 1 150px;
+   background-color: #000000;
+}
+.middle-lower {
+  flex:1 1 150px;
+  background-color: #94618e; 
 }
 .button {
   background-color: #0d69b2;
