--- a/html/styles.css
+++ b/html/styles.css
@@ -23,12 +23,16 @@ footer {
 */
 
 #info {
-  text-align: center;
+  /*text-align: center;*/
   background-color: #f8eee7;
   border: 0;
   padding: 5px;
   margin: 10px;
   border-radius: 10px;
+}
+
+#info h3 {
+  text-align: center;
 }
 
 #message {
