--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'WebSymbolsRegular';
+    src: url('websymbols/websymbols-regular-webfont.eot');
+    src: url('websymbols/websymbols-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('websymbols/websymbols-regular-webfont.woff') format('woff'),
+         url('websymbols/websymbols-regular-webfont.ttf') format('truetype'),
+         url('websymbols/websymbols-regular-webfont.svg#WebSymbolsRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -107,5 +118,61 @@ a:link, a:visited {
 a:hover, a:active {
    color: yellow;
 }
+
+.tx-menu{
+    padding: 0;
+    margin: 20px auto;
+    width: 500px;
+}
+
+.tx-menu li{
+  width: 500px;
+  height: 50px;
+  overflow: hidden;
+  display: block;
+  background: #fff;
+  /*box-shadow: 1px 1px 2px rgba(0,0,0,0.2);*/
+  margin-bottom: 4px;
+  border-left: 10px solid #000;
+}
+
+.tx-icon-left{
+    font-family: 'WebSymbolsRegular', cursive;
+    font-size: 20px;
+    text-shadow: 0px 0px 1px #333;
+    line-height: 90px;
+    position: absolute;
+    width: 90px;
+    left: 20px;
+    text-align: center;
+}
+
+.tx-icon-right{
+    font-family: 'WebSymbolsRegular', cursive;
+    font-size: 20px;
+    text-shadow: 0px 0px 1px #333;
+    line-height: 90px;
+    position: absolute;
+    width: 90px;
+    right: 20px;
+    text-align: center;
+}
+
+.tx-content{
+    position: absolute;
+    left: 120px;
+    width: 260px;
+    height: 30px;
+    top: 10px;
+}
+
+.tx-main{
+    font-size: 15px;
+}
+.tx-sub{
+    font-size: 7px;
+    color: #666;
+}
+
 
 
