--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -13,7 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: Arial;
+  font-family: 'Arial';
   background-color: #94618e;
 }
 
@@ -87,6 +87,8 @@ footer {
   margin: 8px;
   border-radius: 10px;
   padding: 10px;
+  height: 300px;
+  overflow-y: scroll; 
 }
 
 .menu {
@@ -127,28 +129,37 @@ a:hover, a:active {
 
 .tx-menu li{
   width: 500px;
-  height: 50px;
+  /*height: 50px;*/
   overflow: hidden;
   display: block;
-  background: #fff;
+  background: #f8eee7;
   /*box-shadow: 1px 1px 2px rgba(0,0,0,0.2);*/
   margin-bottom: 4px;
-  border-left: 10px solid #000;
+  /*border-left: 10px solid #000;*/
+}
+
+.tx-menu li div{
+    text-align: left;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position:relative;
 }
 
 .tx-icon-left{
-    font-family: 'WebSymbolsRegular', cursive;
+    font-family: 'WebSymbolsRegular';
     font-size: 20px;
     text-shadow: 0px 0px 1px #333;
-    line-height: 90px;
+    /*line-height: 50px;*/
     position: absolute;
     width: 90px;
     left: 20px;
     text-align: center;
+    color: #00bfff;
 }
 
 .tx-icon-right{
-    font-family: 'WebSymbolsRegular', cursive;
+    font-family:'WebSymbolsRegular';
     font-size: 20px;
     text-shadow: 0px 0px 1px #333;
     line-height: 90px;
@@ -163,14 +174,14 @@ a:hover, a:active {
     left: 120px;
     width: 260px;
     height: 30px;
-    top: 10px;
+    /*top: 10px;*/
 }
 
 .tx-main{
-    font-size: 15px;
+    font-size: 20px;
 }
 .tx-sub{
-    font-size: 7px;
+    font-size: 12px;
     color: #666;
 }
 
