Transaction link to a popup (needs content and styles)

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -155,6 +155,12 @@ a:hover, a:active {
     position:relative;
 }
 
+.tx-menu li:hover {
+    background: #f4decb;
+}
+
+
+
 .tx-icon-left{
     font-family: 'WebSymbolsRegular';
     font-size: 20px;
@@ -194,5 +200,24 @@ a:hover, a:active {
     color: #666;
 }
 
-
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0,0,0, 0.5);
+}
+.popup_inner {
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  margin: auto;
+  background: white;
+}
 
